# indexpulse-fno-console

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
docs/: signal-rule-spec.md
momentum_edge/: __init__.py
src/momentum_edge/: __init__.py  alerts.py  candle_utils.py  confidence.py  config.py  dashboard_ui.py  diagnostics.py  formatting.py  history.py  indicators.py  instrument_registry.py  instruments.py  kite_client.py  lifecycle.py  live_cache.py  live_scanner.py  live_snapshot.py  market_data.py  market_session.py  options.py  outcomes.py  performance.py  rules.py  sample_data.py  scanner_state.py  storage.py  trades.py  ui_models.py  version.py  watchlist.py
tests/: test_dashboard_ui.py  test_deployment.py  test_lifecycle.py  test_live_cache.py  test_live_data.py  test_market_session.py  test_options.py  test_outcomes.py  test_rules.py
