[project]
name = "momentum-edge-fno-console"
version = "0.4.0"
description = "Rule engine for Momentum Edge F&O Console signal alerts"
requires-python = ">=3.11,<3.13"
readme = "README.md"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
